book and author